--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 .nav-desktop {
   display: block;
 }
-.nav-mobile {
+#menuToggle {
   display: none;
 }
 
@@ -17,88 +17,17 @@
   .nav-desktop {
     display: none;
   }
-  .nav-mobile {
+
+  #menuToggle {
     display: block;
-    overflow: hidden;
-    padding: 5px !important;
-    background-color: rgb(247, 247, 247) !important;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 50;
-  }
-  .nav-mobile a {
-    float: left;
-    display: block;
-    color: #1f1b1b;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
+    position: relative;
+    top: 20px;
+    left: 20px;
 
-  .nav-mobile a:hover {
-    background: #ddd;
-    color: black;
-  }
-  .connect {
-    color: white !important;
-    background-color: black !important;
-    border-radius: 10px;
-  }
+    z-index: 10;
 
-  .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    background-color: rgb(235, 235, 235);
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 30px;
-    overflow-y: auto;
-  }
-
-  .links {
-    margin-top: 30%;
-  }
-
-  .sidenav a {
-    padding: 5%;
-    width: 100%;
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    display: block;
-    transition: 0.3s;
-  }
-
-  .sidenav a:hover {
-    color: black;
-  }
-
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    font-size: 200%;
-    padding-top: 0px !important;
-    padding-left: 80%;
-  }
-}
-
-@media screen and (max-width: 374px) {
-  .sidenav a {
-    font-size: 10px;
-  }
-}
-@media screen and (max-width: 374px) {
-  .sidenav a {
-    font-size: 15px;
-  }
-
-  .sidenav .closebtn {
-    font-size: 100%;
+    -webkit-user-select: none;
+    user-select: none;
   }
 }
 
@@ -154,4 +83,119 @@ a.item {
 .social-icon {
   color: inherit;
   font-size: 150%;
+}
+
+#menuToggle a {
+  text-decoration: none;
+  color: #232323;
+
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+  color: tomato;
+}
+
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #cdcdcd;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul {
+  transform: none;
 }
